# centralizedhosting

./: .gitignore  Dockerfile  GOVERNMENT_PRODUCTION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: host-Caddyfile
orchestrator/: __init__.py  app_client.py  audit.py  audit_ship.py  aws_kms.py  azure_keyvault.py  backups.py  config.py  db.py  encryption.py  insights.py  key_catalog.py  key_provider.py  kms.py  main.py  managed_settings.py  models.py  offload.py  oidc.py  pii_crypto.py  provisioner.py  queries.py  rollout.py  schemas.py  secrets_policy.py  security.py  sidecar.py  sslcheck.py  stack.py  supply_chain.py  taxonomy.py  telemetry.py
orchestrator/api/: admin.py  analytics_api.py  audit_api.py  auth_sso.py  backups.py  breakglass.py  fleet.py  gis.py  insights_api.py  keys.py  managed_api.py  offload.py  releases.py  requests_api.py  secrets.py  state_credentials.py  status_api.py  tenants.py
orchestrator/static/: dashboard.html
orchestrator/templates/: caddy-site.j2  docker-compose.yml.j2  env.j2
orchestrator/templates/selfhost/: Caddyfile.j2  RUNBOOK.md.j2  docker-compose.yml.j2  env.j2
panel-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
panel-ui/src/: App.tsx  index.css  main.tsx
panel-ui/src/components/: CommandPalette.tsx  KeyMatrix.tsx  Logo.tsx  Shell.tsx  Toast.tsx  TokenGate.tsx  ui.tsx
panel-ui/src/lib/: api.ts  config.ts  googlemaps.ts  session.tsx  types.ts
panel-ui/src/pages/: Alerts.tsx  Analytics.tsx  Audit.tsx  Compliance.tsx  Cost.tsx  Dashboard.tsx  PublicRequest.tsx  Releases.tsx  Requests.tsx  Settings.tsx  Sla.tsx  StateMap.tsx  TownDetail.tsx  Towns.tsx
scripts/: seed_demo.py
tests/: conftest.py  test_auth.py  test_breakglass.py  test_features.py  test_gis.py  test_govprod.py  test_hardening.py  test_isolation.py  test_keys.py  test_lifecycle.py  test_offload.py  test_polling.py  test_program.py  test_rollouts.py  test_secrets.py  test_setup_credential.py  test_sso.py  test_telemetry.py  test_tenants.py
